--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
            <img src="logo.png">
        </div>
       <form method="POST">
-        <input type="text" name="nome" placeholder="nome de usuario" autofocus>
-        <input type="password" name="senha" placeholder="digite sua senha">
+        <input type="text" name="nome" placeholder="Nome de usuário" autofocus>
+        <input type="password" name="senha" placeholder="Digite sua senha">
         <input type="submit" value="entrar">
 
       </form>
